--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
+    "@types/node": "22.13.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.6"
   }
